--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
 html, body{
     padding: 0;
-    margin: 0;
+    margin: 0;  
 }
 #menu{
     width: 100vw;
     background-color: gray;
-    height: 10vh;
+    height: 7.5vh;
+    margin: 0;
+    text-align: center;
 }
 .menupont{
     display: inline-block;
-    width: 25%;
-    height: 10vh;
-    padding-top: 5vh;
-    background-color: black;
+    width: 24%;
+    height: 5vh;
+    padding-top: 2.5vh;
+    background-color: rgba(0,0,0,0.7);
     color: white;
     text-align: center;
-    border: solid gray 1px;
+    border-right: solid gray 1px;
+    margin: 0;
+    text-decoration: none;
+}
+.menupont:hover{
+    font-weight: bold;
+    background-color: black;
 }
